# corne-zmk

./: .gitignore  .gitmodules  Pipfile  README.md  build.yaml  pyproject.toml
.devcontainer/: .bashrc  Dockerfile  devcontainer.json
.github/workflows/: build.yml  keymap-draw.yml
config/: corne.conf  corne.keymap  corne36.conf  corne36.keymap  west.yml
config/includes/: base.dtsi  behaviors_extra.dtsi  combos.dtsi  conditional_layers.dtsi  custom_keycodes.dtsi  macros.dtsi  mouse.dtsi  settings.dtsi  settings_pd.dtsi
keymaps/: corne.yaml  corne_keymap.yaml  corne_keymap36.yaml  keymap-drawer.yaml
scripts/: config.yaml  export_keymap.sh
